z-index fix

--- a/app/component/kanban-board/kanban-board.scss
+++ b/app/component/kanban-board/kanban-board.scss
@@ -80,7 +80,7 @@
     }
 
     .kanban-header-wrapper {
-        z-index: 100;
+        z-index: 98;
     }
 }
 
